zkay/examples/type_errors/ModifyFinalArgumentInConstructor.zkay
pragma zkay >=0.2.0;

contract ModifyFinalArgumentInConstructor {

	constructor() public {
		final uint x = 10;
		x = 20;
	}
}
